--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@lottiefiles/react-lottie-player": "^3.4.2",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-text-rotator": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
