--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   },
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.4.2",
+    "@prisma/client": "^3.11.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-text-rotator": "^1.2.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.4",
+    "@types/node": "^17.0.4",
     "@types/react": "17.0.38",
     "@types/react-dom": "^17.0.14",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
@@ -24,8 +25,10 @@
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
+    "prisma": "^3.11.1",
     "sass": "^1.49.9",
     "tailwindcss": "^3.0.7",
-    "typescript": "4.5.4"
+    "ts-node": "^10.7.0",
+    "typescript": "^4.5.4"
   }
 }
