--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@lottiefiles/react-lottie-player": "^3.4.2",
     "@prisma/client": "^3.11.1",
+    "apollo-server-micro": "^3.6.6",
+    "graphql": "^16.3.0",
     "next": "latest",
+    "nexus": "^1.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-text-rotator": "^1.2.0"
