--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^3.11.1",
     "apollo-server-micro": "^3.6.6",
     "graphql": "^16.3.0",
+    "graphql-scalars": "^1.16.0",
     "next": "latest",
     "nexus": "^1.3.0",
     "react": "^17.0.2",
