--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nexus": "^1.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-text-rotator": "^1.2.0"
+    "react-text-rotator": "^1.2.0",
+    "use-file-picker": "^1.4.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.4",
